--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": [ "dom", "es5", "es2015.promise" ],
+    "lib": [
+      "dom",
+      "es5",
+      "es2015.promise",
+      "es2015",
+      "es2016"
+    ],
     "target": "es5",
     "experimentalDecorators": true,
     "skipLibCheck": true
